[gd_scene load_steps=3 format=3 uid="uid://seeds_dashboard_panel"]

[ext_resource type="Script" path="res://addons/platform_gui/panels/seeds/SeedsDashboardPanel.gd" id="1"]
[ext_resource type="StyleBox" path="res://addons/platform_gui/themes/focus_highlight.tres" id="2_1ac4o"]
[ext_resource type="Script" path="res://addons/platform_gui/components/CompatRichTextLabel.gd" id="3_compat"]

[node name="SeedsDashboardPanel" type="VBoxContainer"]
script = ExtResource("1")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(640, 480)

[node name="SeedHeader" type="HBoxContainer" parent="."]
size_flags_horizontal = 3
alignment = 1

[node name="HeaderLabel" type="Label" parent="SeedHeader"]
text = "Master seed"
size_flags_horizontal = 1

[node name="MasterSeedLabel" type="Label" parent="SeedHeader"]
unique_name_in_owner = true
text = "--"
size_flags_horizontal = 1

[node name="SeedInput" type="LineEdit" parent="SeedHeader"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "Enter master seed"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="ApplySeedButton" type="Button" parent="SeedHeader"]
unique_name_in_owner = true
text = "Apply"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="RandomizeButton" type="Button" parent="SeedHeader"]
unique_name_in_owner = true
text = "Randomize"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="RefreshButton" type="Button" parent="SeedHeader"]
unique_name_in_owner = true
text = "Refresh"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="StatusLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
script = ExtResource("3_compat")
bbcode_enabled = true
text = "Awaiting seed data..."
fit_content = true
scroll_active = false
size_flags_vertical = 1
[node name="ImportStatus" type="Label" parent="."]
unique_name_in_owner = true
text = "RNG status"

[node name="StreamsSection" type="Label" parent="."]
text = "Derived RNG streams"
size_flags_vertical = 1

[node name="StreamsTree" type="Tree" parent="."]
unique_name_in_owner = true
size_flags_vertical = 3
allow_reselect = true
columns = 4
hide_root = true
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="RoutingLabel" type="Label" parent="."]
text = "Stream routing preview"
size_flags_vertical = 1

[node name="RoutingTree" type="Tree" parent="."]
unique_name_in_owner = true
size_flags_vertical = 3
columns = 4
hide_root = true
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="ExportControls" type="HBoxContainer" parent="."]
size_flags_horizontal = 3

[node name="ExportButton" type="Button" parent="ExportControls"]
unique_name_in_owner = true
text = "Export state"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="ImportButton" type="Button" parent="ExportControls"]
unique_name_in_owner = true
text = "Import state"
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")

[node name="ExportText" type="TextEdit" parent="."]
unique_name_in_owner = true
size_flags_vertical = 3
placeholder_text = "Seed export will appear here. Paste a saved JSON payload to import."
focus_mode = 2
theme_override_styles/focus = ExtResource("2_1ac4o")
